[package]
name = "spartan"
version = "0.1.0"
authors = ["Joseph Harrison-Lim <josephharrisonlim@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.2"
dotenv = "0.9.0"
diesel = { version = "1.4.6", features = ["postgres"] }
r2d2 = "0.8.5"

[dependencies.rocket_contrib]
version = "0.4.2"
features = ["diesel_postgres_pool"]
